[project]
name = "analysis"
version = "0.1.0"
readme = "README.md"
requires-python = ">3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "cmocean>=4.0.3",
    "dask>=2025.2.0",
    "flox>=0.10.2",
    "gsw>=3.6.19",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyterlab-widgets>=3.0.13",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "xarray[accel,io,parallel]>=2025.1.2",
]
authors = [
    {name = "Andrew Scherer", email = "andrew@sourcedepth.com"}
]
license = "MIT"
